welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:26: error: not found: value compteur
	compteur==compteur+1
        ^