welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var i=1

for (i <- 1 to 28)
{
	avance()
	avance()
	avance()
	avance()
	gauche()
	avance()
	avance()
	droite()
	avance()
	avance()
	avance()
	avance()
	droite()
	avance()
	avance()
	gauche()
	avance()
	avance()
	avance()
	avance()
	compteur==compteur+1
}
